Add regenerate button to AI Chat tab in entry editor and fix codestyle (fixes #12191)