@@ -48,23 +48,18 @@ public class ChatHistoryComponent extends ScrollPane {
     private void fill(ObservableList<ChatMessage> items) {
         UiTaskExecutor.runInJavaFXThread(() -> {
             vBox.getChildren().clear();
-            // Go through the message list, create message components, and set regenerate functionality for AI messages
             for (ChatMessage chatMessage : items) {
                 ChatMessageComponent component = new ChatMessageComponent(chatMessage, comp -> {
-                    // Directly remove the corresponding message based on the message instance instead of UI index lookup
                     items.remove(chatMessage);
                 });
-                // If the message is an AI message, set the regenerate callback
                 if (chatMessage instanceof AiMessage) {
                     component.setOnRegenerate(comp -> {
-                        // Check if the current AI message is the last one, and ensure there are at least 2 messages (a user message must exist)
-                        if (!items.isEmpty() && items.get(items.size() - 1) == chatMessage && items.size() > 1) {
+                        if (!items.isEmpty() && items.getLast() == chatMessage && items.size() > 1) {
                             ChatMessage previous = items.get(items.size() - 2);
-                            if (previous instanceof UserMessage) {
-                                String userText = ((UserMessage) previous).singleText();
-                                // Remove the last 2 messages: first the AI message, then the corresponding user message
-                                items.remove(items.size() - 1);
-                                items.remove(items.size() - 1);
+                            if (previous instanceof UserMessage message) {
+                                String userText = message.singleText();
+                                items.removeLast();
+                                items.removeLast();
                                 if (regenerateCallback != null) {
                                     regenerateCallback.accept(userText);
                                 }
